# token-metadata

./: .gitignore  Add Chain One (C1) token  Cargo.toml  Makefile  README.md  package.json
.github/workflows/: main.yml  publish-js.yml  publish-rust.yml
clients/js-legacy/: package.json  tsconfig.base.json  tsconfig.cjs.json  tsconfig.esm.json
clients/js-legacy/src/: instruction.ts
clients/js-legacy/test/: instruction.test.ts
interface/: Cargo.toml
interface/src/: error.rs  instruction.rs  lib.rs  state.rs
program/: Cargo.toml
program/src/: entrypoint.rs  processor.rs
program/tests/: emit.rs  initialize.rs  program_test.rs  remove_key.rs  update_authority.rs  update_field.rs
scripts/: solana.dic
scripts/js/: test.mjs
