[package]
name = "spl-token-metadata-interface"
version = "0.8.0"
description = "Solana Program Library Token Metadata Interface"
documentation = "https://docs.rs/spl-token-metadata-interface"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
serde-traits = ["dep:serde", "spl-pod/serde-traits"]

[dependencies]
borsh = "1.5.7"
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1.0.219", optional = true }
solana-borsh = "3.0.0"
solana-instruction = "3.0.0"
solana-program-error = { version = "3.0.0", features = ["borsh"] }
solana-pubkey = { version = "3.0.0", features = ["borsh"] }
spl-discriminator = "0.5.0"
spl-type-length-value = "0.9.0"
spl-pod = { version = "0.7.0", features = ["borsh"] }
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0.142"
solana-sha256-hasher = "3.0.0"
spl-token-metadata-interface = { path = ".", features = ["serde-traits"] }

[lib]
crate-type = ["lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
