[package]
name = "spl-token-metadata-interface"
version = "0.8.0"
description = "Solana Program Library Token Metadata Interface"
documentation = "https://docs.rs/spl-token-metadata-interface"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
serde-traits = [
    "serde/alloc",
    "serde/derive",
    "solana-nullable/serde-with",
    "dep:serde_with",
]

[dependencies]
borsh = { version = "1.5.7", default-features = false }
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
num_enum = { version = "0.7", default-features = false }
serde = { version = "1.0.219", optional = true, default-features = false }
serde_with = { version = "3.12.0", optional = true, default-features = false, features = ["macros"] }
solana-address = { version = "2.4.0", features = ["borsh", "decode", "nullable"] }
solana-borsh = "3.0.2"
solana-instruction = { version = "3.3.0", default-features = false }
solana-nullable = { version = "1.1.0", features = ["borsh"] }
solana-program-error = { version = "3.0.1", features = ["borsh"] }
spl-discriminator = "0.5.2"
spl-type-length-value = "0.9.1"
thiserror = { version = "2.0", default-features = false }

[dev-dependencies]
serde_json = "1.0.143"
solana-sha256-hasher = "3.1.0"
spl-token-metadata-interface = { path = ".", features = ["serde-traits"] }

[lib]
crate-type = ["lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
