[package]
name = "spl-token-metadata-example"
version = "0.3.0"
description = "Solana Program Library Token Metadata Example Program"
documentation = "https://docs.rs/spl-token-group-interface"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = "2.2.1"
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = { version = "0.6.0", path = "../interface" }
spl-type-length-value = "0.7.0"
spl-pod = "0.5.0"

[dev-dependencies]
solana-program-test = "2.2.0"
solana-sdk = "2.2.1"
spl-token-client = "0.13.0"
test-case = "3.3"

[lib]
crate-type = ["cdylib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
