[package]
name = "spl-token-metadata-example"
version = "0.3.0"
description = "Solana Program Library Token Metadata Example Program"
documentation = "https://docs.rs/spl-token-metadata-example"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
no-entrypoint = []

[dependencies]
solana-program = "3.0.0"
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = { version = "0.8.0", path = "../interface" }
spl-type-length-value = "0.9.0"
spl-pod = "0.7.0"

[dev-dependencies]
solana-program-test = { version = "3.1.8", features = ["agave-unstable-api"] }
solana-sdk = "3.0.0"
solana-system-interface = "2"
spl-token-client = { version = "0.18.0", features = ["dev-context-only-utils"] }
test-case = "3.3"

[lib]
crate-type = ["cdylib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
